--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/Administrator/Documents/GitHub/PluginRef/bukkit.jar" sourcepath="C:/Users/Administrator/Documents/GitHub/PluginRef/bukkit.src.zip"/>
+	<classpathentry kind="var" path="GITHUB/PluginRef/bukkit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
